--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
 		<junit.version>4.12</junit.version>
 
 		<!-- The main class to start by executing java -jar -->
-		<start-class>r12.WicketWebApplication</start-class>
+		<start-class>r12.configuration.WicketWebApplication</start-class>
 	</properties>
 
 </project>
