Creadas paginas de autor

--- a/src/main/java/r12/webpages/AuthorPage.properties
+++ b/src/main/java/r12/webpages/AuthorPage.properties
@@ -1,2 +1,3 @@
-author.name = Nombre del autor:
-date.of.birth = Fecha de nacimiento:
+titlePageAuthor = Pagina de Autores:
+name_Author = Nombre del autor:
+date_OfBirth = Fecha de nacimiento:
